src/objects/Case_Information__c.object
<CustomObject>
    <fields>
        <fullName>PSI_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSI Ordered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parole_Date__c</fullName>
        <label>Parole Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parole_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parole Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parole Officer, Parole – Senior Parole Officer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Information (Parole Officer)</relationshipLabel>
        <relationshipName>Parole_Officer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parole_Probation_Contacted__c</fullName>
        <label>Parole/ Probation Contacted?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parole_Probation_Officer_Name__c</fullName>
        <label>Parole/Probation Officer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parole_Probation_Officer_Phone__c</fullName>
        <label>Parole/Probation Officer Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>Part</label>
        <picklist>
            <picklistValues>
                <fullName>016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>054</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR3A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTP1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jury 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAP-B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Placement_months__c</fullName>
        <inlineHelpText>Required if Sentence (above) is &quot;Placement&quot;.  Use Integer.</inlineHelpText>
        <label>Placement (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plea_Finding_Date__c</fullName>
        <label>Plea/ Finding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Intake_VOP_Date__c</fullName>
        <inlineHelpText>Date of VOP, must be after intake date</inlineHelpText>
        <label>Post Intake VOP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Probation_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Probation Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Probation Officer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Information (Probation Officer)</relationshipLabel>
        <relationshipName>Case_Information3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prosecutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prosecutor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Attorney/ Law Guardian</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Information (Prosecutor)</relationshipLabel>
        <relationshipName>Case_Information4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sentence_Disposition_Date__c</fullName>
        <inlineHelpText>Cannot be later than today&apos;s date.</inlineHelpText>
        <label>Disposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sentence_Max_Days__c</fullName>
        <formula>if( ispickval( Sentence_Type__c , &quot;Determinate Sentence&quot;),  Sentence_Min_Days__c , 

value(trim(Mid( Sentence__c, 
find(&quot;-&quot;, Sentence__c)+1, Max(find(&quot;ear&quot;,Mid(Sentence__c, find(&quot;-&quot;, Sentence__c)+1,len(Sentence__c) - find(&quot;-&quot;, Sentence__c))), 
find( &quot;ay&quot;, Mid(Sentence__c, find(&quot;-&quot;, Sentence__c)+1,len(Sentence__c) - find(&quot;-&quot;, Sentence__c))), 
find(&quot;onth&quot;, Mid(Sentence__c, find(&quot;-&quot;, Sentence__c)+1,len(Sentence__c) - find(&quot;-&quot;, Sentence__c))))-3 ))) 

* 

if(contains(RIGHT(Sentence__c, 7), &quot;ay&quot;), 1, 
if(contains(RIGHT(Sentence__c, 7), &quot;on&quot;), 30, 
if(contains(RIGHT(Sentence__c, 7), &quot;ea&quot;), 365,0 
))) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sentence Max Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sentence_Min_Days__c</fullName>
        <formula>value(LEFT(LEFT( Sentence__c , if(contains(Sentence__c, &quot;-&quot;), find(&quot;-&quot;, Sentence__c), len(Sentence__c)) 
), Max(find(&quot;ear&quot;,LEFT(Sentence__c, 7)), find( &quot;ay&quot;, LEFT(Sentence__c, 7)), find(&quot;onth&quot;, LEFT(Sentence__c, 7)))-3 )) 

* 

if(contains(LEFT(Sentence__c, 7), &quot;ay&quot;), 1, 
if(contains(LEFT(Sentence__c, 7), &quot;on&quot;), 30, 
if(contains(LEFT(Sentence__c, 7), &quot;ea&quot;), 365,0 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sentence Min Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sentence_Type__c</fullName>
        <label>Sentence Type</label>
        <picklist>
            <picklistValues>
                <fullName>12 Months CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjournment in Contemplation of Dismissal (ACD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Determinate Sentence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fines with Jail Alternatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate Sentence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Public Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Year or Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Treatment Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation (level I)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation (level II)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation (level III)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation and Time Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program/Treatment Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation/split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sentence__c</fullName>
        <label>Sentence Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialized_Court__c</fullName>
        <label>Specialized Court</label>
        <picklist>
            <picklistValues>
                <fullName>Brooklyn Treatment Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervising_Probation_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervising Probation Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supervising Probation Officer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Information (Supervising Probation Officer)</relationshipLabel>
        <relationshipName>Case_Information5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supreme_Court_Arraignment_Date__c</fullName>
        <label>Supreme Court Arraignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supreme_Court_Period__c</fullName>
        <defaultValue>6</defaultValue>
        <inlineHelpText>Usual period for paticiapnts referred to by Supreme Court; in months. Used to calculate Projected Exit Date by adding time to the first attended orientation date.</inlineHelpText>
        <label>Supreme Court Period</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_Arraignment_Charge_Level__c</fullName>
        <label>Top Arraignment Charge Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Arrest_Charge_Level__c</fullName>
        <label>Top Arrest Charge Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Arrest_Charge__c</fullName>
        <label>Top Arrest Charge</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Criminal_Court_Arraignment_Charge__c</fullName>
        <label>Top Criminal Court Arraignment Charge</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Family_Court_Arraignment_Charge__c</fullName>
        <label>Top Family Court Arraignment Charge</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Indictment_Charge_Level__c</fullName>
        <label>Top Indictment Charge Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Indictment_Charge__c</fullName>
        <label>Top Indictment Charge</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Plea_Charge_Level__c</fullName>
        <label>Top Plea Charge Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Plea_Charge__c</fullName>
        <label>Top Plea Charge</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check means &quot;Yes&quot; if there has been any
violation on probation. (VOP)</inlineHelpText>
        <label>VOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Youthful_Offender_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if the client&apos;s sentence includes Youthful Offender (YO) Status</inlineHelpText>
        <label>Youthful Offender Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Account__c</columns>
        <columns>Borough__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Court_Part__c</columns>
        <columns>Part__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CasesForQcTestingClients</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Indictment__c</columns>
        <columns>Intake_Date__c</columns>
        <columns>Borough__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cases for QC Testing Clients</label>
    </listViews>
    <listViews>
        <fullName>CasesForTrainingClients</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Indictment__c</columns>
        <columns>Intake_Date__c</columns>
        <columns>Borough__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cases for Training Clients</label>
    </listViews>
    <listViews>
        <fullName>CriminalCourtCases</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Borough__c</columns>
        <columns>Current_Case_Status__c</columns>
        <columns>Supreme_Court_Arraignment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Information__c.Criminal_Court</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Criminal Court Cases</label>
    </listViews>
    <listViews>
        <fullName>DocketNACases</fullName>
        <columns>NAME</columns>
        <columns>No_Docket__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Borough__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Docket NA</value>
        </filters>
        <label>Docket NA Cases</label>
    </listViews>
    <listViews>
        <fullName>RearrestCases</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Borough__c</columns>
        <filterScope>Everything</filterScope>
        <label>Rearrest Cases</label>
    </listViews>
    <listViews>
        <fullName>RecentCases</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Borough__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Recent Cases</label>
    </listViews>
    <nameField>
        <label>Docket #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Information</pluralLabel>
    <recordTypes>
        <fullName>Criminal_Court</fullName>
        <active>true</active>
        <label>Criminal Court</label>
    </recordTypes>
    <recordTypes>
        <fullName>Family_Court</fullName>
        <active>true</active>
        <label>Family Court</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supreme_Court</fullName>
        <active>true</active>
        <label>Supreme Court</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trial_Court</fullName>
        <active>true</active>
        <description>new type added per Diane Racz</description>
        <label>Trial Court</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Arrest_Date_cant_be_in_the_future</fullName>
        <active>true</active>
        <description>Arrest Date can&apos;t be in the future</description>
        <errorConditionFormula>AND (Arrest_Date__c &gt; TODAY () )</errorConditionFormula>
        <errorDisplayField>Arrest_Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Arrest_Number_Validation</fullName>
        <active>false</active>
        <description>Format: 1 uppercase letter and 8 numbers C######## (no spaces).</description>
        <errorConditionFormula>AND(NOT(REGEX(Arrest_Number__c, &quot;([A-Z]\\d{8})&quot;)), NOT(ISBLANK(Arrest_Number__c)))</errorConditionFormula>
        <errorMessage>Arrest Numbers must be 1 UPPERCASE letter and 8 numbers: C######## (no spaces)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bond_Amount_MadeBail</fullName>
        <active>false</active>
        <description>Enter a monetary bond amount based on detention status at criminal court arraignment or supreme court arraignment (MADE BAIL)</description>
        <errorConditionFormula>AND( AND ( (ISPICKVAL(   Detention_Status_at_CC_Arraignment__c  , &quot;Made Bail&quot;)),(ISPICKVAL(   Detention_Status_at_SC_Arraignment__c   , &quot;Made Bail&quot;))), ISNULL( Bail_Set_Bond__c ))</errorConditionFormula>
        <errorDisplayField>Bail_Set_Bond__c</errorDisplayField>
        <errorMessage>Must enter a bond amount if Detention status at Criminal Court or Supreme Court Arraignment is Made Bail or In on Bail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CC_Arraignment_Date_cant_be_in_future</fullName>
        <active>true</active>
        <description>Criminal Court Arraignment Date can&apos;t be in the future</description>
        <errorConditionFormula>AND (Criminal_Court_Arraignment_Date__c &gt; TODAY () )</errorConditionFormula>
        <errorDisplayField>Criminal_Court_Arraignment_Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cash_Amount_InOnBail</fullName>
        <active>false</active>
        <description>Enter a monetary Cash amount based on detention status at criminal court arraignment or supreme court arraignment (IN ON BAIL)</description>
        <errorConditionFormula>AND( AND ( (ISPICKVAL(   Detention_Status_at_CC_Arraignment__c  , &quot;In On Bail&quot;)),(ISPICKVAL(   Detention_Status_at_SC_Arraignment__c   , &quot;In On Bail&quot;))), ISNULL(  Bail_Set_Cash__c  ))</errorConditionFormula>
        <errorDisplayField>Bail_Set_Cash__c</errorDisplayField>
        <errorMessage>Must enter a cash amount if Detention status at Criminal Court or Supreme Court Arraignment is Made Bail or In On Bail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cash_Amount_MadeBail</fullName>
        <active>false</active>
        <description>Enter a monetary Cash amount based on detention status at criminal court arraignment or supreme court arraignment (MADE BAIL)</description>
        <errorConditionFormula>AND( AND ( (ISPICKVAL(   Detention_Status_at_CC_Arraignment__c  , &quot;Made Bail&quot;)),(ISPICKVAL(   Detention_Status_at_SC_Arraignment__c   , &quot;Made Bail&quot;))), ISNULL(  Bail_Set_Cash__c  ))</errorConditionFormula>
        <errorDisplayField>Bail_Set_Cash__c</errorDisplayField>
        <errorMessage>Must enter a cash amount if Detention status at Criminal Court or Supreme Court Arraignment is Made Bail or In On Bail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DA_Plea_Offer_Other</fullName>
        <active>false</active>
        <description>if other is selected in DA&apos;s Plea Offer, then Other Plea Offer Other is required</description>
        <errorConditionFormula>AND(ISPICKVAL(     DA_s_Plea_Offer__c  , &quot;Other&quot;),     If_Other_Plea_Offer__c   = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>If_Other_Plea_Offer__c</errorDisplayField>
        <errorMessage>Other Plea Offer is required if DA&apos;s Plea offer is OTHER.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Docket_No_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(REGEX( Name, &quot;(((20|19)([0-9]{2})[A-Z]{2}[0-9]{6}$)|([D|E][-][0-9]{4,9}[/][0-9]{2}$))|(CR-[0-9]{6}-[0-9]{2}[A-Z]{2}$)&quot;)),
Name &lt;&gt; &quot;Docket NA&quot;,
Name &lt;&gt; &quot;Pending&quot;,
DATEVALUE(CreatedDate) &gt;= DATE(2015,1,22)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Docket format is YYYYXX000000  or CR-000000-00XX for Criminal and Supreme Court.

For Family Court, the format is D-123456789/YY (like D-33445/14). The petition number can be 4-9 digits.
Enter &quot;Docket NA&quot;  if there&apos;s no docket, and &quot;Pending&quot; for TBD.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Indictment_Date_cant_be_in_future</fullName>
        <active>true</active>
        <description>Indictment Date can&apos;t be in the future</description>
        <errorConditionFormula>AND (Indictment_Date__c &gt; TODAY () )</errorConditionFormula>
        <errorDisplayField>Indictment_Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Indictment_No_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(
     OR(LEN(  Indictment__c ) = 0,
     OR(
     AND(
 
  CONTAINS(&quot;S&quot;, LEFT( Indictment__c , 1)),
  CONTAINS(&quot;C&quot;,  MID( Indictment__c, 2, 1)),
  CONTAINS(&quot;I&quot;,  MID( Indictment__c, 3, 1)),
  CONTAINS(&quot;0123456789&quot;, MID( Indictment__c , 4,1)), 
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 5, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 6, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 7, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 8, 1)),
  MID( Indictment__c, 9, 1) = &quot;-&quot;,
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 10, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 11, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 12, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 13, 1))
  ),

  AND(
  CONTAINS(&quot;0123456789&quot;, LEFT( Indictment__c , 1)), 
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 2, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 3, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 4, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 5, 1)),
  MID( Indictment__c, 6, 1) = &quot;-&quot;,
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 7, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 8, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 9, 1)),
  CONTAINS(&quot;0123456789&quot;,  MID( Indictment__c, 10, 1)) 
)
 )
)
)</errorConditionFormula>
        <errorDisplayField>Indictment__c</errorDisplayField>
        <errorMessage>Valid Indictment # formats are : 99999-YYYY,   SCI99999-YYYY</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Judge_Promise_Successful_Other</fullName>
        <active>false</active>
        <description>if other is selected in Judge&apos;s promise if Successful, then Successful other is required</description>
        <errorConditionFormula>AND(ISPICKVAL(  Judge_s_Promise_if_Successful__c  , &quot;Other&quot;),   If_Successful_Other__c  = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>If_Successful_Other__c</errorDisplayField>
        <errorMessage>Other Successful is required if Judge&apos;s Promise if Successful is OTHER.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Judge_Promise_UnSuccessful_Other</fullName>
        <active>false</active>
        <description>if other is selected in Judge&apos;s promise if UnSuccessful, then Unsuccessful other is required</description>
        <errorConditionFormula>AND(ISPICKVAL(    Judge_s_Promise_if_Unsuccessful__c , &quot;Other&quot;),    If_Unsuccessful_Other__c   = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>If_Unsuccessful_Other__c</errorDisplayField>
        <errorMessage>Other Unsuccessful is required if Judge&apos;s Promise if Unsuccessful is OTHER.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Plea_Date_less_than_today</fullName>
        <active>false</active>
        <description>It should not be possible to enter a plea/ finding date that is greater than today&apos;s date.</description>
        <errorConditionFormula>Plea_Finding_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Plea_Finding_Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Post_Intake_VOP_Date_cant_be_in_future</fullName>
        <active>true</active>
        <description>Post Intake VOP Date can&apos;t be in the future</description>
        <errorConditionFormula>AND (Post_Intake_VOP_Date__c &gt; TODAY () )</errorConditionFormula>
        <errorDisplayField>Post_Intake_VOP_Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SC_Arraignment_Date_cant_be_in_future</fullName>
        <active>true</active>
        <description>Supreme Court Arraignment Date</description>
        <errorConditionFormula>AND (Supreme_Court_Arraignment_Date__c &gt; TODAY () )</errorConditionFormula>
        <errorDisplayField>Supreme_Court_Arraignment_Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sentence_Disposition_Before_Today</fullName>
        <active>true</active>
        <description>It should not be possible to enter a sentence/ disposition date that is greater than today&apos;s date.</description>
        <errorConditionFormula>Sentence_Disposition_Date__c  &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Sentence_Disposition_Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sentence_Ent_SentenceDispo_Date_Req</fullName>
        <active>false</active>
        <description>If there is a Sentence, there must be/ a Sentence/ Disposition Date.

4/28/08 - Activated after fixing data</description>
        <errorConditionFormula>OR(
AND(
NOT(ISPICKVAL(   Sentence_Type__c , &quot;Not Entered&quot;)), NOT(ISPICKVAL(   Sentence_Type__c   , &quot;&quot;)),ISNULL(  Sentence_Disposition_Date__c )))</errorConditionFormula>
        <errorDisplayField>Sentence_Disposition_Date__c</errorDisplayField>
        <errorMessage>If there is a Sentence, there has to be a Sentence/ Disposition Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sentence_FC_Placement_Months</fullName>
        <active>true</active>
        <description>If Sentence FC is Placement, then Placement Months has to be entered.</description>
        <errorConditionFormula>AND (ISPICKVAL( Sentence_Type__c, &quot;Placement&quot;),  ISNULL(Placement_months__c ))</errorConditionFormula>
        <errorDisplayField>Placement_months__c</errorDisplayField>
        <errorMessage>Placement Months has to be entered if Sentence for FC is Placement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sentence_Placement_Mts_1_24</fullName>
        <active>true</active>
        <description>Valid value is between 1 and 24</description>
        <errorConditionFormula>OR ( Placement_months__c  = 0,  Placement_months__c &gt; 24)</errorConditionFormula>
        <errorDisplayField>Placement_months__c</errorDisplayField>
        <errorMessage>Placement Months has to be between 1 - 24.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sentence_required_if_sentence_date</fullName>
        <active>true</active>
        <description>12/29/14 MB changed so this only applies to Supreme/Criminal Court.

4/28/08 - Activated again after fixing data

This is deactivated because of the automatic update of the sentence date from the court date event.</description>
        <errorConditionFormula>AND( 
NOT( ISNULL(Sentence_Disposition_Date__c )), 
ISPICKVAL(Sentence_Type__c , &quot;&quot;),
RecordType.Name != &apos;Family Court&apos;)</errorConditionFormula>
        <errorDisplayField>Sentence_Type__c</errorDisplayField>
        <errorMessage>If a sentence/ disposition date is entered, a sentence has to be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VOP_Sentence_Date_cant_be_in_future</fullName>
        <active>true</active>
        <description>VOP Original Sentence Date can&apos;t be in the future</description>
        <errorConditionFormula>AND (If_VOP_Original_Sentence_Date__c &gt; TODAY () )</errorConditionFormula>
        <errorDisplayField>If_VOP_Original_Sentence_Date__c</errorDisplayField>
        <errorMessage>Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_DAs_Plea</fullName>
        <active>false</active>
        <errorConditionFormula>if( ispickval( DA_s_Plea_Offer__c, &quot;Determinate Sentence&quot;), 
not(REGEX( DA_s_Plea_Offer_Sentence__c , &quot;([0-9]|[1-9][0-9]|[1-9][0-9][0-9])\\s([dD][a][y]|[mM][o][n][t][h]|[yY][e][a][r])s?&quot;)), 
if( ispickval(DA_s_Plea_Offer__c, &quot;Indeterminate Sentence&quot;), 
not(REGEX( DA_s_Plea_Offer_Sentence__c, &quot;([0-9]|[1-9][0-9]|[1-9][0-9][0-9])\\s([dD][a][y]|[mM][o][n][t][h]|[yY][e][a][r])s?\\s?-\\s?([0-9]|[1-9][0-9]|[1-9][0-9][0-9])\\s([dD][a][y]|[mM][o][n][t][h]|[yY][e][a][r])s?&quot;)), 
false))</errorConditionFormula>
        <errorDisplayField>DA_s_Plea_Offer_Sentence__c</errorDisplayField>
        <errorMessage>If determinate, enter as X Days/Months/Years. 

If indeterminate, enter as X Days/Months/Years to Y Days/Months/Years. 

For example, &quot;6 Months&quot; or &quot;15 Days - 20 Days&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_DAs_Plea_Offer_Days</fullName>
        <active>false</active>
        <errorConditionFormula>or(  DA_s_Plea_Offer_Min_Days__c &lt; 1, DA_s_Plea_Offer_Max_Days__c &lt; DA_s_Plea_Offer_Min_Days__c )</errorConditionFormula>
        <errorDisplayField>DA_s_Plea_Offer_Sentence__c</errorDisplayField>
        <errorMessage>The maximum sentence must be greater than the minimum sentence.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Judge_Promise_Unsuccessful_Days</fullName>
        <active>false</active>
        <errorConditionFormula>or( Judge_s_Promise_if_Unsuccessful_Min_Days__c &lt; 1, Judge_s_Promise_if_Unsuccessful_Max_Days__c  &lt; Judge_s_Promise_if_Unsuccessful_Min_Days__c )</errorConditionFormula>
        <errorDisplayField>Judge_s_Promise_Sentence_Unsuccessful__c</errorDisplayField>
        <errorMessage>The maximum sentence must be greater than the minimum sentence.</errorMessage>
    </validationRules>
</CustomObject>